--- a/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
@@ -49,11 +49,11 @@
                                             <Span Text="Coupon One " FontAttributes="Bold" FontSize="Large"/>
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Store: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Store: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="HEB 111 South Boogie Street" FontSize="Body" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Description: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Description: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="You get a free bucket of armadillos. You're guaranteed to get leprose or your money back!" FontSize="Body"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
@@ -70,11 +70,11 @@
                                             <Span Text="Coupon Two " FontAttributes="Bold" FontSize="Large"/>
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Store: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Store: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="HEB 222 South Boogie Street" FontSize="Body" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Description: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Description: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="You get a free bucket of armadillos. You're guaranteed to get leprose or your money back!" FontSize="Body"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
@@ -91,11 +91,11 @@
                                             <Span Text="Coupon Three " FontAttributes="Bold" FontSize="Large"/>
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Store: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Store: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="HEB 333 South Boogie Street" FontSize="Body" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Description: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Description: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="You get a free bucket of armadillos. You're guaranteed to get leprose or your money back!" FontSize="Body"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
@@ -112,11 +112,11 @@
                                             <Span Text="Coupon Four " FontAttributes="Bold" FontSize="Large"/>
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Store: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Store: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="HEB 444 South Boogie Street" FontSize="Body" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
                                             <Span Text="{x:Static system:Environment.NewLine}" />
-                                            <Span Text="Description: " FontAttributes="Bold" FontSize="Header" />
+                                            <Span Text="Description: " FontAttributes="Bold" FontSize="18" />
                                             <Span Text="You get a free bucket of armadillos. You're guaranteed to get leprose or your money back!" FontSize="Body"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
@@ -128,10 +128,11 @@
             </ScrollView>
 
             <!-- Settings and Account Buttons -->
-            <StackLayout Orientation="Horizontal" Padding="20,10,20,10" Spacing="10" BackgroundColor="{StaticResource Accent}" Grid.Row="2">
-                <Button Text="Stores" BackgroundColor="{StaticResource Primary}" WidthRequest="100" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="Body" />
-                <Button Text="Account" BackgroundColor="{StaticResource Primary}" WidthRequest="100" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="Body" />
-                <Button Text="Settings" BackgroundColor="{StaticResource Primary}" WidthRequest="100" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="Body" />
+            <StackLayout Orientation="Horizontal" Padding="10,10,10,10" Spacing="10" BackgroundColor="{StaticResource Accent}" Grid.Row="2">
+                <Button Text="Stores" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
+                <Button Text="Account" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
+                <Button Text="Settings" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
+                <Button Text="About" Command="{Binding OpenAboutView}" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
             </StackLayout>   
         </Grid>
     </ContentPage.Content>
