--- a/TopShelfCustomer/TopShelfCustomer.iOS/Resources/LaunchScreen.storyboard
+++ b/TopShelfCustomer/TopShelfCustomer.iOS/Resources/LaunchScreen.storyboard
@@ -13,25 +13,11 @@
                         <viewControllerLayoutGuide type="top" id="Y8P-hJ-Z43"/>
                         <viewControllerLayoutGuide type="bottom" id="9ZL-r4-8FZ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="yd7-JS-zBw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="tintColor" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace" white="1" alpha="1"/>
-                        <color key="backgroundColor" colorSpace="custom" customColorSpace="sRGB" red="0.945098039215686" green="0.352941176470588" blue="0.133333333333333" alpha="1"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="318" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="TopShelfLogo.png">
-                                <rect key="frame" x="30" y="226" width="355" height="267"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                        </subviews>
-                    </view>
+                    <connections/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="349" y="339"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="TopShelfLogo.png" width="2560" height="2560"/>
-    </resources>
 </document>
