--- a/TopShelfCustomer/TopShelfCustomer/App.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/App.xaml
@@ -6,8 +6,9 @@
 
             <!-- Colors -->
             <Color x:Key="NavigationPrimary">#F15A22</Color>
-            <Color x:Key="Primary">#F15A22</Color>
-            <Color x:Key="Accent">#0C2340</Color>
+            <Color x:Key="Primary">#F15A22</Color>  <!-- Orange -->
+            <Color x:Key="Accent">#0C2340</Color>   <!-- Blue -->
+            <Color x:Key="AccentLight">#10325d</Color>
             <Color x:Key="LightTextColor">#999999</Color>
 
             <!-- NavigationPage Styles -->
