--- a/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/HomePage.xaml
@@ -6,7 +6,7 @@
 
     <!-- Content -->
     <ContentPage.Content>
-        <Grid>
+        <Grid BackgroundColor="{StaticResource AccentLight}">
             <!-- RowDefinitions -->
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -148,10 +148,15 @@
 
             <!-- Settings and Account Buttons -->
             <StackLayout Orientation="Horizontal" Padding="10,10,10,10" Spacing="10" BackgroundColor="{StaticResource Accent}" Grid.Row="2">
-                <Button Text="Stores" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
-                <Button Text="Account" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
-                <Button Text="Settings" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
-                <Button Text="About" Command="{Binding OpenAboutView}" BackgroundColor="{StaticResource Primary}" WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" FontSize="14" />
+                <Button Text="New Order" BackgroundColor="{StaticResource Primary}"
+                        WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White"
+                        FontAttributes="Bold" FontSize="14" />
+                <Button Text="Past Orders" BackgroundColor="{StaticResource Primary}"
+                        WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White"
+                        FontAttributes="Bold" FontSize="14" />
+                <Button Text="Settings" Command="{Binding OpenSettingsView}" BackgroundColor="{StaticResource Primary}"
+                        WidthRequest="80" HorizontalOptions="FillAndExpand" TextColor="White"
+                        FontAttributes="Bold" FontSize="14" />
             </StackLayout>   
         </Grid>
     </ContentPage.Content>
