--- a/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
@@ -27,18 +27,18 @@
                     <StackLayout Orientation="Vertical" Spacing="30">
                         <ContentView>
                             <StackLayout Orientation="Horizontal">
-                                <Image Source="news-48.png" HeightRequest="64" />
+                                <Image Source="news_48.png" HeightRequest="64" />
                                 <Entry Placeholder="Username" TextColor="White" BackgroundColor="{StaticResource Accent}"
                                        VerticalOptions="CenterAndExpand" HeightRequest="46"
-                                       PlaceholderColor="White" WidthRequest="220"/>
+                                       PlaceholderColor="White" WidthRequest="260"/>
                             </StackLayout>
                         </ContentView>
                         <ContentView>
                             <StackLayout Orientation="Horizontal">
-                                <Image Source="secure-letter-48.png" HeightRequest="64"  />
+                                <Image Source="secure_letter_48.png" HeightRequest="64"  />
                                 <Entry IsPassword="True" Placeholder="Password" TextColor="White" BackgroundColor="{StaticResource Accent}"
                                        VerticalOptions="CenterAndExpand" HeightRequest="46"
-                                       PlaceholderColor="White" WidthRequest="220"/>
+                                       PlaceholderColor="White" WidthRequest="260"/>
                             </StackLayout>
                         </ContentView>
                     </StackLayout>
