--- a/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
@@ -29,16 +29,16 @@
                             <StackLayout Orientation="Horizontal">
                                 <Image Source="news_48.png" HeightRequest="64" />
                                 <Entry Placeholder="Username" TextColor="White" BackgroundColor="{StaticResource Accent}"
-                                       VerticalOptions="CenterAndExpand" HeightRequest="46"
-                                       PlaceholderColor="White" WidthRequest="260"/>
+                                       VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding EmailInput, Mode=TwoWay}"
+                                       PlaceholderColor="White" WidthRequest="260" Keyboard="Email"/>
                             </StackLayout>
                         </ContentView>
                         <ContentView>
                             <StackLayout Orientation="Horizontal">
                                 <Image Source="secure_letter_48.png" HeightRequest="64"  />
                                 <Entry IsPassword="True" Placeholder="Password" TextColor="White" BackgroundColor="{StaticResource Accent}"
-                                       VerticalOptions="CenterAndExpand" HeightRequest="46"
-                                       PlaceholderColor="White" WidthRequest="260"/>
+                                       VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding PasswordInput, Mode=TwoWay}"
+                                       PlaceholderColor="White" WidthRequest="260" Keyboard="Plain"/>
                             </StackLayout>
                         </ContentView>
                     </StackLayout>
